# gam

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini
.github/workflows/: cmake-single-platform.yml
GAM/Include/: Application.h  Mesh.h  TMesh.h  geometry.h  utils.h
GAM/Source/: Application.cpp  Mesh.cpp  TMesh.cpp  geometry.cpp  main.cpp
cmake/: BuildInfo.cmake  ConfigPresets.cmake  Coverage.cmake  CppCheck.cmake  Doxyfile.in  Doxygen.cmake  Format.cmake  Memcheck.cmake  Packaging.cmake  SetupEnvVariables.cmake  Testing.cmake  buildinfo.h.in
data/: blue_noise.txt
data/cloud/: blue_noise.txt
data/off/: alpes_random_29200.off
data/shaders/: base.glsl  base2.glsl  gam.glsl  mesh.glsl  normals.glsl  points.glsl  texcoords.glsl
src/: CMakeLists.txt  Mesh.cpp  Mesh.hpp  main.cpp  mesh.cpp  mesh.h  utils.h  utils.hpp
src/Include/: App.h  Delaunay.h  Framebuffer.h  Geometry.h  TMesh.h  Timer.h  Utils.h  Viewer.h  Window.h  geometry.h  pch.h  utils.h
src/Include/PCH/: PCH.h
src/Source/: App.cpp  Delaunay.cpp  Framebuffer.cpp  Geometry.cpp  TMesh.cpp  Timer.cpp  Utils.cpp  Viewer.cpp  Window.cpp  geometry.cpp  main.cpp  utils.cpp
test/: CMakeLists.txt  TMesh_utest.cpp
